--- a/angular_training/tasks/task2-3/index.html
+++ b/angular_training/tasks/task2-3/index.html
@@ -7,12 +7,16 @@
   <script src="3rdparty/angular.js"></script>
   <script src="js/app.js"></script>
 </head>
-<body ng-controller="testAppCtrl">
+<body ng-controller="testAppCtrl" ng-init="title = 'title from root scope'">
 
-    <custom_tabs>
+  <h1>{{title}}</h1>
+
+    <custom_tabs>   
 
       <custom_tab ng-repeat="tab in tabs" title="tab.title" on-tab-activated="tab.loader()">
          {{tab.content || 'Loading...'}}
+          <br>
+         {{title}}
       </custom_tab>
 
      </custom_tabs>
