implemented unit test for task 2

--- a/angular_training/tasks/task2-3/index.html
+++ b/angular_training/tasks/task2-3/index.html
@@ -14,7 +14,7 @@
 
     <custom_tabs>    
 
-      <custom_tab ng-repeat="tab in tabs" title="tab.title" on-tab-activated="tab.loader()">
+      <custom_tab ng-repeat="tab in tabs" title="{{tab.title}}" on-tab-activated="tab.loader()">
          {{tab.content || 'Loading...'}}
           <br>
          {{title}}
