test commit from sublime

--- a/app/task4/index.html
+++ b/app/task4/index.html
@@ -15,7 +15,7 @@
 	<basket>
 		<div>Basket:</div>
 		<div ng-repeat="basketItem in basketItems" >
-			<div  ng-click="removeFromBasket(basketItem)">{{basketItem.name}}</div>
+			<div  ng-click="removeFromBasket(basketIteзm)">{{basketItem.name}}</div>
 		</div>
 		<div>Count: {{basketItems.length}}</div>
 	</basket>
