--- a/app/task5/index.html
+++ b/app/task5/index.html
@@ -7,11 +7,12 @@
 	<script src="js/custom.js"></script>
 
 </head>
-	<body ng-app="task4" >
+	<body ng-app="task5" >
 	
 	<!-- 
-	4. Implement application that will demonstrate communication between directives with firing events.
-	For that place directives in a different scopes with the only parent which is root scope.
+	5. Implement application that will demonstrate communication between directives using dependency injection.
+		so that data is transfered through the services injected into both directives.
+
 	-->
 	<basket>
 		<div>Basket:</div>
